# advanced_programming

./: .gitignore  README.md  docker-compose-azure.yml  docker-compose-backend.yml  docker-compose.yml  main.py
.github/workflows/: analysis-docker-image.yml  fetcher-docker-image.yml  newspaper-docker-image.yml  persistence-docker-image.yml  view-docker-image.yml  webserver-docker-image.yml
Documentation/: News_Feed-Backlog.xlsx  News_Feed-Presentation.pptx  api.postman_collection.json  openapi-auth.json  openapi-auth.yml  openapi.json  openapi.yml
analysis/: Dockerfile  README.md  pyproject.toml
analysis/app/: main.py
authentication/oauthtest/: app.js  authcall.html  home.html  package-lock.json  package.json
database/: README.md  pyproject.toml
database/app/: main.py  model.py
exp/: README.MD  pyproject.toml  server_sqlite.json
exp/exp/: main.py
fetcher/: Dockerfile  README.md  pyproject.toml
fetcher/app/: main.py
newspaper/: Dockerfile  README.md  pyproject.toml
newspaper/app/: main.py
newspaper/tests/: test_newspaper.py
persistence/: README.md  pyproject.toml
persistence/app/: main.py  model.py
view/: .eslintrc.js  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
view/helpers/: api.js
view/public/: index.html
view/src/: App.vue  main.js  menu.js
view/src/components/: AsideMenu.vue  CardClientBar.vue  CardComponent.vue  CardTransactionBar.vue  CardWidget.vue  ClientsTable.vue  Control.vue  FooterBar.vue  HeroBar.vue  LevelDiv.vue  ModalBox.vue  NavBar.vue  NavBarMenu.vue  NewsCard.vue  Notification.vue  TitleBar.vue  UserCard.vue
view/src/helpers/: api.js
view/src/router/: index.js
view/src/store/: index.js
view/src/views/: Error.vue  Forms.vue  Home.vue  Login.vue  LoginView.vue  NewsFeed.vue  Profile.vue  Register.vue  RegisterView.vue  SourceList.vue  Ui.vue
webserver/: Dockerfile  README.md  pyproject.toml
webserver/app/: .env.example  api.py  auth.py  connection.py  dtos.py  dummy.py  jwt.py  jwtoken.py  main.py  models.py  oauth.py  user.py  utils.py
webserver/fetcher/: main.py
