[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "The NLP module"
authors = ["Leonardo Razovic <4128940+lrazovic@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
