[tool.poetry]
name = "fetcher"
version = "0.1.0"
description = "The fetcher module"
authors = ["Leonardo Razovic <4128940+lrazovic@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.8"
jsonrpcserver = "^5.0.6"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
morss = {git = "https://git.pictuga.com/pictuga/morss.git"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
