[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "MIT"
authors = ["Leonardo Razovic <4128940+lrazovic@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
schematics = "^2.1.1"
feedparser = "^6.0.8"
pymongo = "^4.0.1"
jsonrpcclient = "^4.0.2"
uvicorn = "^0.16.0"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
