[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "MIT"
authors = ["Leonardo Razovic <4128940+lrazovic@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
schematics = "^2.1.1"
jsonrpcclient = "^4.0.2"
uvicorn = "^0.17.0"
httpx = "^0.22"
easy-auth = "^1.0.19"
pydantic = {extras = ["email"], version = "^1.8.2"}
pydbantic = "^0.0.21"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
