[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "MIT"
authors = ["Leonardo Razovic <4128940+lrazovic@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
jsonrpcclient = "^4.0.2"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
httpx = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-dotenv = "^0.19.2"
Authlib = "^0.15.5"
PyJWT = "^2.3.0"
itsdangerous = "^2.0.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
